# flexa-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  TODO.md  bitbucket-pipelines.yml  docker-compose.dev.yaml  docker-compose.local.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ecr-publish.yml
app/: main.py
app/libs/: containers.py  dependencies.py  exceptions.py  jwt_decode.py  lifespan.py  logging_config.py  middleware.old.py  middleware.py  monitor_memory.py  response.py
app/routes/health/: controller.py
app/routes/new_home/: __init__.py
app/routes/passenger_flow/: controller.py
config/: nginx.conf
docker/_nginx/: compose.yml
docker/develop/: Dockerfile  compose.yaml
docker/development/: Dockerfile  compose.yaml  dockerfile
docker/production/: compose.yaml
docker/staging/: Dockerfile  compose.yaml
dump/airports/: service.py
dump/auth/domain/: repository.py
dump/managements/: schema.py  service.py
dump/profiles/: router.py  schema.py  service.py
dump/simulation/: _service.py  router.py
samples/: README.md  input_choice_matrix.json  input_run_simulation.json  input_show_up.json  output_choice_matrix.json  output_run_simulation.json  output_show_up.json  sample_processing_procedures.json  sim_pax.csv  sim_pax.parquet  test_sample.csv  v1_sim_input.json  v1_sim_pax.json  v1_sim_pax.parquet  v2_sim_pax.json
sandbox/ready.d/: setup-s3.sh  setup-sqs.sh
src/: boto3_session.py  common.py  constants.py  containers.py  database.py  exceptions.py  main.py  middleware.py  storages.py
src/admin/application/: service.py
src/admin/domain/: repository.py
src/admin/infra/: models.py  repository.py
src/admin/interface/: controller.py  schema.py
src/admins/: router.py  schema.py  service.py
src/airports/: model.py  queries.py  router.py  schema.py  service.py
src/auth/: router.py  schema.py  service.py
src/auth/application/: service.py
src/auth/infra/: repository.py
src/auth/interface/: controller.py
src/facility/application/: service.py
src/facility/domain/: repository.py
src/facility/infra/: repository.py
src/facility/interface/: controller.py
src/home/application/: service.py
src/home/domain/: home.py  repository.py
src/home/infra/: repository.py
src/managements/: router.py  schema.py  service.py
src/profiles/: router.py  schema.py  service.py
src/simulation/: router.py  schema.py
src/users/: queries.py  router.py  schema.py  service.py
supabase-local/: .env.example
(+87 files in other folders)
