[project]
name = "flexa-waitfree-api"
version = "0.1.7"
description = "Flexa Waitless API"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "DataMKTKorea" },
    { name = "Flexa" },
]
dependencies = [
    "aioboto3>=15.0.0",
    "asyncpg>=0.30.0",
    "awswrangler>=3.11.0",
    "boto3>=1.38.27",
    "dependency-injector>=4.46.0",
    "fastapi[standard]>=0.115.12",
    "loguru>=0.7.3",
    "pandas>=2.2.3",
    "pendulum>=3.1.0",
    "psutil>=7.0.0",
    "psycopg[binary,pool]>=3.2.0",
    "pydantic>=2.11.4",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.20",
    "python-ulid>=3.0.0",
    "redshift-connector>=2.1.8",
    "sqlalchemy>=2.0.40",
    "supabase>=2.15.1",
]
