[project]
name = "flexa-simmula-api"
version = "0.1.3"
description = "Flexa Simmula API server"
readme = "README.md"
requires-python = ">=3.13,<3.14"
authors = [{ name = "DataMKTKorea" }, { name = "Flexa" }]
dependencies = [
    "aioboto3>=15.0.0",
    "aiohttp>=3.13.2",
    "asyncpg>=0.30.0",
    "awswrangler>=3.11.0",
    "boto3>=1.38.27",
    "dependency-injector>=4.46.0,<5.0",
    "fastapi[standard]>=0.121.2",
    "greenlet>=3.0.0",
    "loguru>=0.7.3",
    "pandas>=2.2.3",
    "psutil>=7.0.0",
    "psycopg[binary,pool]>=3.2.0",
    "pydantic>=2.12.0,<3.0",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.20",
    "python-ulid>=3.0.0",
    "redshift-connector>=2.1.8",
    "sqlalchemy>=2.0.40",
    "supabase>=2.15.1",
    "watchfiles>=1.1.1",
]

[dependency-groups]
dev = ["black>=25.11.0", "ruff>=0.14.7"]
